--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <img src="images/product-1.png" alt="">
             <div class="content">
                 <h3>nike shoes</h3>
-                <div class="price">$120.99 <span>$150.99</span></div>
+                <div class="price">₹1299 <span>₹1599</span></div>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -163,7 +163,7 @@
             <img src="images/product-2.png" alt="">
             <<div class="content">
                 <h3>nike shoes</h3>
-                <div class="price">$120.99 <span>$150.99</span></div>
+                <div class="price">₹1199 <span>₹1599</span></div>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -184,7 +184,7 @@
             <img src="images/product-3.png" alt="">
             <div class="content">
                 <h3>nike shoes</h3>
-                <div class="price">$120.99 <span>$150.99</span></div>
+                <div class="price">₹1699 <span>₹1899</span></div>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -205,7 +205,7 @@
             <img src="images/product-4.png" alt="">
             <div class="content">
                 <h3>nike shoes</h3>
-                <div class="price">$120.99 <span>$150.99</span></div>
+                <div class="price">₹1599 <span>₹1999</span></div>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -226,7 +226,7 @@
             <img src="images/product-5.png" alt="">
             <div class="content">
                 <h3>nike shoes</h3>
-                <div class="price">$120.99 <span>$150.99</span></div>
+                <div class="price">₹1699 <span>₹2099</span></div>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -247,7 +247,7 @@
             <img src="images/product-6.png" alt="">
             <div class="content">
                 <h3>nike shoes</h3>
-                <div class="price">$120.99 <span>$150.99</span></div>
+                <div class="price">₹1299 <span>₹1599</span></div>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -293,7 +293,7 @@
                 <i class="far fa-star"></i>
             </div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta facilis praesentium odit voluptas illum iure libero quis fuga commodi. Autem.</p>
-            <div class="price">$80.99 <span>$120.99</span></div>
+            <div class="price">₹1599 <span>₹2099</span></div>
             <a href="#" class="btn">add to cart</a>
         </div>
     </div>
@@ -320,7 +320,7 @@
                 <i class="far fa-star"></i>
             </div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta facilis praesentium odit voluptas illum iure libero quis fuga commodi. Autem.</p>
-            <div class="price">$80.99 <span>$120.99</span></div>
+            <div class="price">₹1899 <span>₹2399</span></div>
             <a href="#" class="btn">add to cart</a>
         </div>
     </div>
@@ -347,7 +347,7 @@
                 <i class="far fa-star"></i>
             </div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta facilis praesentium odit voluptas illum iure libero quis fuga commodi. Autem.</p>
-            <div class="price">$80.99 <span>$120.99</span></div>
+            <div class="price">₹2199 <span>₹2999</span></div>
             <a href="#" class="btn">add to cart</a>
         </div>
     </div>
@@ -365,7 +365,7 @@
     <div class="box-container">
 
         <div class="box">
-            <img src="images/pic1.png" alt="">
+            <img src="images/pic01.png" alt="">
             <h3>john deo</h3>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat, quos eum. Laborum aut a consequatur ducimus, molestias possimus quisquam rerum temporibus ipsum voluptate accusamus, unde ab asperiores? Exercitationem, unde rem.</p>
             <div class="stars">
@@ -442,10 +442,10 @@
 
         <div class="box">
             <h3>quick links</h3>
-            <a href="#">home</a>
-            <a href="#">products</a>
-            <a href="#">featured</a>
-            <a href="#">review</a>
+            <a href="#home">home</a>
+            <a href="#products">products</a>
+            <a href="#featured">featured</a>
+            <a href="#review">review</a>
         </div>
 
         <div class="box">
@@ -458,13 +458,13 @@
 
         <div class="box">
             <h3>follow us</h3>
-            <a href="#">facebook</a>
+            <a href="https://www.facebook.com/HarimadhavVats">facebook</a>
             <a href="#">twitter</a>
-            <a href="#">instagram</a>
-            <a href="#">linkedin</a>
+            <a href="https://www.instagram.com/harimadhav.jee/">instagram</a>
+            <a href="https://www.linkedin.com/in/hari-madhav-jha-4915192b5/">linkedin</a>
         </div>
 
-        <div class="credit">created by <span> Shubham Sharma </span> | all rights reserved</div>
+        <div class="credit">created by <span> Harimadhav Jha </span> | all rights reserved</div>
 
     </div>
 
